--- a/CleanAr.Application/CleanAr.Application.csproj
+++ b/CleanAr.Application/CleanAr.Application.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +11,6 @@
     <Folder Include="Blogs\Commands\DeleteBlog\" />
     <Folder Include="Blogs\Commands\UpdateBlog\" />
     <Folder Include="Blogs\Queries\GetBlogById\" />
-    <Folder Include="Blogs\Queries\GetBlogs\" />
     <Folder Include="Commons\Behavious\" />
     <Folder Include="Commons\Exceptions\" />
     <Folder Include="Commons\Mappings\" />
